2010-10-24  Glenn Morris  <rgm@gnu.org>

	* frame.el (show-trailing-whitespace, auto-hscroll-mode)
	(display-hourglass, hourglass-delay, cursor-in-non-selected-windows):
	Don't redefine things that are defined in C.
	* cus-start.el: Also handle :risky, :safe, :set, and :tag.
	(show-trailing-whitespace, auto-hscroll-mode)
	(display-hourglass, hourglass-delay, cursor-in-non-selected-windows):
	Set up the appropriate custom properties.

2010-10-24  Chong Yidong  <cyd@stupidchicken.com>

	Bind "C-c ]" to ...
	* progmodes/f90.el (f90-mode-map): ... f90-insert-end.
	* nxml/nxml-mode.el (nxml-mode-map): ... nxml-finish-element.
	* textmodes/tex-mode.el (tex-mode-map): ... latex-close-block.
	* textmodes/sgml-mode.el (sgml-mode-map): ... sgml-close-tag.

2010-10-23  Glenn Morris  <rgm@gnu.org>

	* textmodes/flyspell.el (flyspell-mode): If there was an error,
	say what it was.

	* frame.el (auto-hscroll-mode, cursor-in-non-selected-windows):
	Sync docs with C version.

	* term/ns-win.el (xw-defined-colors):
	* term/x-win.el (xw-defined-colors): Make docs identical to w32-win.

	* term/pc-win.el (x-select-enable-clipboard):
	* term/x-win.el (x-select-enable-clipboard):
	* w32-vars.el (x-select-enable-clipboard): Make doc-strings identical.

	* comint.el (comint-password-prompt-regexp): Make it less vague.
	Bump version.

	* help-fns.el (doc-file-to-man, doc-file-to-info): New commands.

	* help.el (finder-by-keyword): Remove unnecessary autoload.

2010-10-22  Glenn Morris  <rgm@gnu.org>

	* loadup.el: Unconditionally load float-sup.
	* paren.el (show-paren-delay):
	* emacs-lisp/float-sup.el:
	* emulation/cua-base.el (cua-prefix-override-inhibit-delay):
	* obsolete/lazy-lock.el (lazy-lock-defer-time, lazy-lock-stealth-nice)
	(lazy-lock-stealth-verbose): Assume float support.
	* ps-print.el: Assume float support on Emacs.
	* emacs-lisp/timer.el (timer-next-integral-multiple-of-time):
	Remove non-float branch.

	* emacs-lisp/autoload.el (batch-update-autoloads): Update for