@@ -1,5 +1,8 @@
 2010-10-24  Glenn Morris  <rgm@gnu.org>
 
+	* xfaces.c (syms_of_xfaces) <tty-defined-color-alist>: Sync doc with
+	Lisp version.
+
 	* w32term.c (syms_of_w32term) <x-use-underline-position-properties>:
 	Sync doc with the xterm.c version.
 
